--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
             <div
                 class=" grid grid-cols-1 md:grid-cols-3 xl:grid-cols-6 gap-4  justify-center overflow-hidden py-6 sm:py-10 rounded-2xl">
-                <a href="/stand-design-and-builder-company-in-germany">
+                <a href="/stand-design-and-builder-company-in-germany" title="Germany">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -328,7 +328,7 @@
                     </div>
                 </a>
 
-                <a href="/stand-design-company-in-netherlands">
+                <a href="/stand-design-company-in-netherlands" title="Netherlands">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -350,7 +350,7 @@
                     </div>
                 </a>
 
-                <a href="/exhibition-stand-builders-italy">
+                <a href="/exhibition-stand-builders-italy" title="Italy">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -372,7 +372,7 @@
                     </div>
                 </a>
 
-                <a href="/exhibition-stand-builder-spain">
+                <a href="/exhibition-stand-builder-spain" title="Spain">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -394,7 +394,7 @@
                     </div>
                 </a>
 
-                <a href="/exhibition-stand-builder-in-france">
+                <a href="/exhibition-stand-builder-in-france" title="France">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -416,7 +416,7 @@
                     </div>
                 </a>
 
-                <a href="/exhibition-stand-builder-switzerland">
+                <a href="/exhibition-stand-builder-switzerland" title="Switzerland">
                     <div
                         class="group relative cursor-pointer overflow-hidden bg-white  shadow-xl ring-1 ring-gray-900/5  transition-all duration-500 hover:-translate-y-1 hover:shadow-2xl  sm:max-w-[20rem] sm:rounded-lg ">
                         <span
@@ -909,9 +909,9 @@
 
     <!-- Brand - Section -->
     <section class="p-5 md:p-10">
-        <h4 class=" text-xl md:text-2xl lg:text-3xl font-semibold py-5 lg:pt-10 text-[#FB6C24]">
+        <h3 class=" text-xl md:text-2xl lg:text-3xl font-semibold py-5 lg:pt-10 text-[#FB6C24]">
             Brands we have served!
-        </h4>
+        </h3>
         <div class="grid grid-cols-3 xl:grid-cols-6 gap-5 m-auto">
             <img src="./images/brands/GENOSS-min.png" alt="img1"
                 class="w-[100%] h-[80%] shadow-lg lg:hover:scale-105 duration-500 shadow-zinc-500">
@@ -1249,7 +1249,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </body>
 
 </html>
