--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
                         Services <i class="fa fa-sort-down text-white"></i>
                     </button>
                     <ul class="hidden dropdown mt-2 ml-4" id="services-dropdown">
-                        <li><a href="#" class="block py-2 hover:underline">Custom Execution Stand</a></li>
-                        <li><a href="#" class="block py-2 hover:underline">Country Pavilion Stand</a></li>
-                        <li><a href="#" class="block py-2 hover:underline">Modular Stands Design</a></li>
+                        <li><a href="/custom-stand" class="block py-2 hover:underline">Custom Execution Stand</a></li>
+                        <li><a href="/country-pavilion-stand" class="block py-2 hover:underline">Country Pavilion
+                                Stand</a></li>
+                        <li><a href="/modular-bematrix-stand" class="block py-2 hover:underline">Modular Stands
+                                Design</a></li>
                     </ul>
                 </li>
                 <li>
@@ -197,21 +199,27 @@
                         Content Hub <i class="fa fa-sort-down text-white"></i>
                     </button>
                     <ul class="hidden dropdown mt-2 ml-4" id="content-hub-dropdown">
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Blog</a></li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Global Presence</a></li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Major Exhibition Cities</a>
+                        <li class="nav-item"><a href="/blog" class="block py-2 hover:underline">Blog</a></li>
+                        <li class="nav-item"><a href="/global-presence" class="block py-2 hover:underline">Global
+                                Presence</a></li>
+                        <li class="nav-item"><a href="/major-exhibiting-cities" class="block py-2 hover:underline">Major
+                                Exhibition Cities</a>
                         </li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Exhibition Stand Design</a>
+                        <li class="nav-item"><a href="/exhibition-stand-design"
+                                class="block py-2 hover:underline">Exhibition Stand Design</a>
                         </li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Exhibition Stand Builder</a>
+                        <li class="nav-item"><a href="/exhibition-stand-builders"
+                                class="block py-2 hover:underline">Exhibition Stand Builder</a>
                         </li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Exhibition Stand
+                        <li class="nav-item"><a href="/exhibition-stand-contractor"
+                                class="block py-2 hover:underline">Exhibition Stand
                                 Contractor</a></li>
-                        <li class="nav-item"><a href="#" class="block py-2 hover:underline">Rent Booth By Size</a></li>
+                        <li class="nav-item"><a href="/rent-booth-by-size" class="block py-2 hover:underline">Rent Booth
+                                By Size</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="hover:underline">Trade Show Calendar</a></li>
-                <li><a href="#" class="hover:underline">Get In Touch</a></li>
+                <li><a href="/trade-show-calender" class="hover:underline">Trade Show Calendar</a></li>
+                <li><a href="/get-in-touch" class="hover:underline">Get In Touch</a></li>
             </ul>
         </div>
 
